# MedImagesLabs

16_Pract_1/: 16_Pract_1_Report.odt
16_Pract_1/16_Pract_1_Code/: CMakeLists.txt  DICOMDIR  Sprite.h  main.cpp  main2.cpp
16_Pract_2/: 16_Pract_2_Report.odt
16_Pract_2/16_Pract_2_Code/: CMakeLists.txt  Circle.cpp  Circle.h  CoordinateSystem.cpp  CoordinateSystem.h  Shader.cpp  Shader.h  main.cpp
16_Pract_3/: 16_Pract_3_Report.odt
16_Pract_3/16_Pract_3_Code/: CMakeLists.txt  DicomFileWrapper.cpp  DicomFileWrapper.h  Image.cpp  Image.h  Shader.h  TextRenderer.h  main.cpp
16_Pract_4/: .~lock.16_Pract_4_Report.odt#  16_Pract_4_Report.odt
16_Pract_4/16_Pract_4_Code/: CMakeLists.txt  DicomDataReader.cpp  DicomDataReader.h  DicomFileWrapper.cpp  DicomFileWrapper.h  Image.cpp  Image.h  Renderable.h  Shader.cpp  Shader.h  TextRenderer.cpp  TextRenderer.h  derived.dcm  main.cpp  trans.dcm
16_Pract_5/: 16_Pract_5_Report.odt
16_Pract_5/16_Pract_5_Code/: CMakeLists.txt  DicomFileWrapper.cpp  DicomFileWrapper.h  Image.cpp  Image.h  Renderable.h  Shader.cpp  Shader.h  TextRenderer.cpp  TextRenderer.h  main.cpp
16_RGR/: 16_RGR_Report.odt
16_RGR/RGR/: CMakeLists.txt  Coordinate.h  CoordinateSystem.cpp  CoordinateSystem.h  Cube.cpp  Cube.h  Drawable.cpp  Drawable.h  Line.cpp  Line.h  Point.cpp  Point.h  Shader.cpp  Shader.h  Slice.cpp  Slice.h  main.cpp
